# seneca

./: .gitignore  Cargo.toml  README.md  swarm.example.json
docs/: architecture.md  build-plan.md  glossary.md  limitations.md  overview.md  phase-1.md  prior-art.md
src/: evidence.rs  main.rs
whitepaper/: seneca.tex
